Refined some HTML here and there.

--- a/html/video.html
+++ b/html/video.html
@@ -80,6 +80,9 @@
 	</div>
 	
 	<div id="comments-container">
+		<div id="comments-preload">
+			<a>View XX comments.</a>
+		</div>
 		<div id="comments">
 			<div id="comment1" class="comment">
 				<div id="author1" class="author">
